--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,21 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <dependencies>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>2.2.224</version> <!-- 你可以使用最新版本 -->
+      <scope>runtime</scope>
+    </dependency>
+
+
+    <!-- MySQL Connector -->
+<!--    <dependency>-->
+<!--      <groupId>mysql</groupId>-->
+<!--      <artifactId>mysql-connector-java</artifactId>-->
+<!--      <version>8.0.33</version>-->
+<!--    </dependency>-->
+  </dependencies>
+
 </project>
