--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
       <scope>runtime</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.7.1</version>
+    </dependency>
+
 
     <!-- MySQL Connector -->
 <!--    <dependency>-->
