--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+<!--  must have-->
   <groupId>org.example</groupId>
   <artifactId>student-crud</artifactId>
   <version>1.0-SNAPSHOT</version>
@@ -30,6 +31,7 @@
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>${postgresql.version}</version>
+<!--      <exclusions></exclusions>-->
     </dependency>
 
     <!-- Servlet API -->
@@ -93,3 +95,4 @@
     </plugins>
   </build>
 </project>
+
