enable basic auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,9 @@ spring.application.name=springDemo
 # actuator
 # ?????? eg. http://localhost:8080/actuator/info
 management.endpoints.web.exposure.include=*
+
+# JWT??
+#jwt.secret=yourSecretKeyHereShouldBeAtLeast32CharactersLong
+#jwt.expiration=86400000
+
+logging.level.org.springframework.security=DEBUG
