rough implementation of OAuth 2.0

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,11 +33,26 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} -
 spring.application.name=springDemo
 
 # actuator
-# ?????? eg. http://localhost:8080/actuator/info
+# eg. http://localhost:8080/actuator/info
 management.endpoints.web.exposure.include=*
 
-# JWT??
-#jwt.secret=yourSecretKeyHereShouldBeAtLeast32CharactersLong
-#jwt.expiration=86400000
+# OAuth2 GitHub??
+spring.security.oauth2.client.registration.github.client-id=Ov23liVmiShFpzQNGgcp
+spring.security.oauth2.client.registration.github.client-secret=1c6f2b376957e91f04b56c32409d8f9883fc55fa
+# GitHub??????????????????????????
+spring.security.oauth2.client.registration.github.scope=read:user,user:email
+
+# SSO??
+spring.security.oauth2.client.provider.custom-sso.authorization-uri=https://your-sso-server/oauth2/authorize
+spring.security.oauth2.client.provider.custom-sso.token-uri=https://your-sso-server/oauth2/token
+spring.security.oauth2.client.provider.custom-sso.user-info-uri=https://your-sso-server/userinfo
+spring.security.oauth2.client.provider.custom-sso.user-name-attribute=sub
+
+spring.security.oauth2.client.registration.custom-sso.client-id=your-client-id
+spring.security.oauth2.client.registration.custom-sso.client-secret=your-client-secret
+spring.security.oauth2.client.registration.custom-sso.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.custom-sso.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.custom-sso.scope=openid,profile,email
 
 logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.oauth2=DEBUG
